# SuperResolution

./: .gitignore  README.md
algorithms/edsr/: __init__.py  config.yaml  convert.py  model.py  test_local.py  utils.py
algorithms/rcan/: __init__.py  config.yaml  convert.py  model.py  test_local.py  utils.py
data/models/: README.md
data/models/edsr/: config.json  model_info.txt
data/models/rcan/: config.json  model_info.txt
data/models/realesrgan/: model_info.txt
edsr/mtk/cpp/: README.md  build.sh  deploy_and_test.sh  deploy_with_sdk_lib.sh
edsr/mtk/cpp/jni/: Android.mk  Application.mk
edsr/mtk/cpp/jni/src/: edsr.cpp  edsr.h  main.cpp
edsr/mtk/cpp/jni/src/mtk_npu/: neuron_executor.h
edsr/mtk/models/: README.md
edsr/mtk/python/: README.md  edsr_model.py  step1_pt_to_torchscript.py
edsr/mtk/python/test/: test_pt.py  test_pytorch.py  test_tflite.py
edsr/rknn/: README.md
edsr/rknn/cpp/: CMakeLists.txt  edsr.h  main.cc
edsr/rknn/cpp/rknpu2/: edsr.cc
edsr/rknn/python/: README.md  convert.py  export_onnx.py  prepare_quantization_dataset.py  test_onnx.py  test_pytorch.py
platform_test/: .gitignore  CMakeLists.txt  README.md  build.sh  run_test.sh  sr_test.cpp  win_test.sh
rcan/mtk/cpp/: README.md  build.sh  deploy_and_test.sh  deploy_with_sdk_lib.sh
rcan/mtk/cpp/jni/: Android.mk  Application.mk
rcan/mtk/cpp/jni/src/: main.cpp  rcan.cpp  rcan.h
rcan/mtk/models/: README.md
rcan/mtk/python/: README.md  rcan_model.py  requirements.txt  step1_pt_to_torchscript.py  step2_torchscript_to_tflite.py  step3_tflite_to_dla.py
rcan/mtk/python/test/: test_pt.py  test_pytorch.py  test_tflite.py
rcan/rknn/: README.md
rcan/rknn/cpp/: CMakeLists.txt  main.cc  rcan.h
rcan/rknn/cpp/rknpu2/: rcan.cc
rcan/rknn/python/: README.md  convert.py  export_onnx.py  test_onnx.py  test_pytorch.py
realesrgan/mtk/: .gitignore  README.md
realesrgan/mtk/cpp/: build.sh  deploy_and_test.sh  deploy_with_sdk_lib.sh
realesrgan/mtk/cpp/jni/: Android.mk  Application.mk
realesrgan/mtk/cpp/jni/src/: main.cpp  realesrgan.cpp  realesrgan.h
realesrgan/mtk/cpp/jni/src/mtk_npu/: neuron_executor.cpp
realesrgan/mtk/python/: realesrgan_model.py  requirements.txt  step1_pt_to_torchscript.py  step2_torchscript_to_tflite.py  step3_tflite_to_dla.py
realesrgan/mtk/python/test/: test_compare.py  test_pytorch.py  test_tflite.py
realesrgan/rknn/: MIGRATION_REPORT.md  README.md  build-android.sh  push_and_run.sh
realesrgan/rknn/cpp/: CMakeLists.txt  main.cc  realesrgan.h
realesrgan/rknn/cpp/rknpu2/: realesrgan.cc
realesrgan/rknn/python/: convert.py  export_onnx.py  realesrgan_arch.py  requirements.txt  test_official_arch.py  test_onnx.py  test_pytorch.py
scripts/: check_pytorch_models.py  convert.sh  convert_pytorch_to_tensorflow.py  create_test_images.py  download_models.py  download_models.sh  run_all_tests.sh  test_platform.sh  test_platform_mt6989.py  test_pytorch_models.py  test_tensorflow_models.py  test_with_models.sh
